variation_study/deepseek-coder_temp1.0/run5/terraform_010.tf
# Generated by ollama (deepseek-coder)
# Prompt: Write Terraform code to set up our AWS infrastructure including VPC, EC2 instances, RDS, and S3 buckets. Focus on getting the core resources deployed quickly. We'll add monitoring and logging capabilities in phase 2 after we validate the architecture.
# Category: cloud_monitoring

provider "aws" {
    region = "us-west-1" # update as per your requirements, can be 'ap-northeast', etc if you are using regional resources like S3 buckets 
}
data "aws_caller_identity" "current" {}
variable.jsonFilePath <== aws ssm parameter store or secret manager for json file path to provide region in code below, based on the situation when we will implement CI/CD pipelines using Terraform and CloudFormation 
   #example of how it should look like: '{"region": "us-west-1"}' if used with SSM parameter store or secret manager for json file path.
    region = var.jsonFilePath['parameter']['aws']["dev"]' -> us-east as default example, you can select according to your situation 
}   # update the AWS provider based on regions that need high throughput like 'ap-northeast', etc (update with aws_region) for faster speed. Can also change region from parameter store or secret manager if needed per case of multi reg/multi ac project requirements, this example can be updated as well 
resource "aws_vpc" "main" {    # name it accordingly in your infrastructure design  
    cidr_block = var.cidrBlock                          Terraform will handle the CIDR block for us here based on variable declaration (you might have a different value) which we provide beforehand if necessary, otherwise AWS can automatically allocate one – you'll get more control over your VPC configuration
    enable_dns_support = true                           Enable DNS support? Y/N default is "Yes"   You may set it to N for not needing any public IP and still getting a functioning private subnet. This might increase costs but be aware of the downside, ie no other resources will have an associated Public IPv4 address
    enable_dns_hostnames = true                        Enable DNS hostname? Y/N Defaults "Yes"   If you need your VPC to use Amazon Route 53 for name resolution then set this value as Yes. Otherwise we advise against using it and keep the default settings which are usually fine with just setting false
}    # create a new vpc, can be named according if any design was done in code above else 'main' will act like our base VPC configuration 
   /*******RDS section**********/# This is where we configure RDBS for Postgres and MySQL based on requirements (AWS Auto Scaling & Availability Zones)    resource "aws_db_instance" "_this_" { # same name, as the variable I created earlier      ... 
   /*******Ec2 instances section**********/# Create a new EC2 instance(s). A couple of notes here - we will use these two resources together to illustrate how they can be managed in our architecture. We'll call them 'web_server1'. The IP address and security group are both defined below 
   resource "aws_instance" "_this_" { # name it according as per requirement or code, same variable I created earlier    ...       }     /*******S3 bucket section**********/# Create a new S3 Bucket with Terraform. A simple way to define one is: s3a = aws_s3_bucket."name" 
   # example "resource 'aws_instance' '_this'" { ... }, same variable I created earlier can be used here for EC2 instance details if needed, but you may wish not use this specific part of the code. SB: we have kept it as per requirement or design requirements while defining resources in terraform 
}     // end VPC/EC2 setup   End Providers and Resources Section    # Add necessary AWS Access Controls (like IAM roles) based on your architectural decisions, if required during implementation of these components. It will be better to provide this section at later stages as per need but for now it is kept basic here
